crates/symbolicator-js/tests/integration/snapshots/integration__sourcemap__e2e_multiple_smref_scraped.snap
---
source: crates/symbolicator-js/tests/integration/sourcemap.rs
expression: response
---
stacktraces:
  - frames:
      - function: onFailure
        filename: test.js
        module: files/test
        abs_path: "http://localhost:<port>/files/test.js"
        lineno: 5
        colno: 11
        pre_context:
          - "var makeAFailure = (function() {"
          - "  function onSuccess(data) {}"
          - ""
          - "  function onFailure(data) {"
        context_line: "    throw new Error('failed!');"
        post_context:
          - "  }"
          - ""
          - "  function invoke(data) {"
          - "    var cb = null;"
          - "    if (data.failed) {"
        data:
          sourcemap: "http://localhost:<port>/files/app.js.map"
          resolved_with: scraping
          symbolicated: true
raw_stacktraces:
  - frames:
      - abs_path: "http://localhost:<port>/files/app.js"
        lineno: 1
        colno: 64
        context_line: "var makeAFailure=function(){function n(n){}function e(n){throw new Error(\"failed!\")}function r(r){var i=null;if(r.failed){i=e}else{i=n}i(r)} {snip}"
        post_context:
          - ""
          - ""
          - "//# sourceMappingURL=a.different.map"
          - ""
          - //@ sourceMappingURL=another.different.map
scraping_attempts:
  - url: "http://localhost:<port>/files/app.js"
    status: success
  - url: "http://localhost:<port>/files/app.js.map"
    status: success

