crates/symbolicator-js/tests/integration/snapshots/integration__sourcemap__e2e_react_native.snap
---
source: crates/symbolicator-js/tests/integration/sourcemap.rs
expression: response
---
stacktraces:
  - frames:
      - function: foo
        filename: module.js
        module: module
        abs_path: "app:///module.js"
        lineno: 2
        colno: 11
        pre_context:
          - "export function foo() {"
        context_line: "    throw new Error(\"lets throw!\");"
        post_context:
          - "}"
        in_app: true
        data:
          sourcemap: "app:///index.android.bundle.map"
          resolved_with: release
          symbolicated: true
raw_stacktraces:
  - frames:
      - abs_path: "app:///index.android.bundle"
        lineno: 1
        colno: 11940
scraping_attempts:
  - url: "app:///index.android.bundle"
    status: not_attempted
  - url: "app:///index.android.bundle.map"
    status: not_attempted

