crates/symbolicator-js/tests/integration/snapshots/integration__sourcemap__fetch_error.snap
---
source: crates/symbolicator-js/tests/integration/sourcemap.rs
expression: response
---
stacktraces:
  - frames:
      - filename: foo.js
        abs_path: "http://localhost:<port>/assets/missing_foo.js"
        lineno: 1
        colno: 0
      - filename: foo.js
        abs_path: "http://localhost:<port>/assets/missing_bar.js"
        lineno: 4
        colno: 0
raw_stacktraces:
  - frames:
      - filename: foo.js
        abs_path: "http://localhost:<port>/assets/missing_foo.js"
        lineno: 1
        colno: 0
      - filename: foo.js
        abs_path: "http://localhost:<port>/assets/missing_bar.js"
        lineno: 4
        colno: 0
errors:
  - abs_path: "http://localhost:<port>/assets/missing_bar.js"
    type: missing_source
  - abs_path: "http://localhost:<port>/assets/missing_foo.js"
    type: missing_source
scraping_attempts:
  - url: "http://localhost:<port>/assets/missing_foo.js"
    status: failure
    reason: not_found
  - url: "http://localhost:<port>/assets/missing_bar.js"
    status: failure
    reason: not_found

