crates/symbolicator-js/tests/integration/snapshots/integration__sourcemap__source_expansion.snap
---
source: crates/symbolicator-js/tests/integration/sourcemap.rs
expression: response
---
stacktraces:
  - frames:
      - filename: foo.js
        abs_path: "http://example.com/foo.js"
        lineno: 1
        colno: 0
        context_line: h
        post_context:
          - e
          - l
          - l
          - o
          - " "
      - filename: foo.js
        abs_path: "http://example.com/foo.js"
        lineno: 4
        colno: 0
        pre_context:
          - h
          - e
          - l
        context_line: l
        post_context:
          - o
          - " "
          - w
          - o
          - r
raw_stacktraces:
  - frames:
      - filename: foo.js
        abs_path: "http://example.com/foo.js"
        lineno: 1
        colno: 0
        context_line: h
        post_context:
          - e
          - l
          - l
          - o
          - " "
      - filename: foo.js
        abs_path: "http://example.com/foo.js"
        lineno: 4
        colno: 0
        pre_context:
          - h
          - e
          - l
        context_line: l
        post_context:
          - o
          - " "
          - w
          - o
          - r
scraping_attempts:
  - url: "http://example.com/foo.js"
    status: not_attempted

